# OPD-CMAKE

./: readme.txt
sfml.1/: CMakeLists.txt
sfml.1/00/: Makefile  cmake_install.cmake
sfml.1/01/: Makefile  cmake_install.cmake
sfml.1/02/: Makefile  cmake_install.cmake
sfml.1/03/: Makefile  cmake_install.cmake  main.cpp
sfml1.1/: CMakeLists.txt
sfml1.1/1.1/: Makefile  cmake_install.cmake  main.cpp
sfml1.1/1.2/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml1.1/1.3/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml1.2/00/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml1.2/01/: Makefile  cmake_install.cmake  main.cpp
sfml1.2/02/: Makefile  cmake_install.cmake
sfml1.2/sfml2.1/: Makefile  cmake_install.cmake  main.cpp
sfml1.2/sfml2.2/: Makefile  cmake_install.cmake  main.cpp
sfml3/: CMakeLists.txt
sfml3/01/: main.cpp
sfml3/03/: main.cpp
sfml3/04/: main.cpp
sfml3/sfml3.3/: main.cpp
workshop1/: CMakeLists.txt
workshop1/1.1/: CMakeLists.txt  main.cpp
workshop1/1.2/: CMakeLists.txt
workshop2/: CMakeLists.txt
workshop2/01/: main.cpp
